# agentpool

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: validate.yaml
docs/plans/: 2026-03-13-agentpool-mvp-implementation.md
entries/solutions/: agent-cost-circuit-breaker.yaml  agent-death-spiral-rapid-tool-failures.yaml  agent-handoff-structured-protocol.yaml  agent-human-escalation-threshold.yaml  agent-knowledge-flywheel-openclaw.yaml  agent-loop-termination-guard.yaml  agent-memory-three-layer-system.yaml  agent-memory-tiered-retrieval.yaml  agent-output-diffing.yaml  agent-prompt-injection-through-tool-results.yaml  agent-scratchpad-isolation.yaml  agent-search-queries-have-high-failure-rate-due-to-query-doc.yaml  agent-session-memory.yaml  agent-size-token-performance.yaml  agent-structured-handoff-openclaw-channels.yaml  agent-task-state-machine.yaml  agent-tool-allowlist.yaml  agents-falling-back-to-the-local-fast-provider-qwen3-30b-fast-on-port-8081-can-c.yaml  api-battery-values-are-often-returned-as-floats-0-1-rather-than-integers-0-100.yaml  archie-gateway-service-zaiglm-47-on-port-18790-requires-manual-daemon-startup.yaml  archies-model-must-be-glm-47-not-flash-to-avoid-rate-limit-deadlocks-in-cron-job.yaml  async-native-no-sync-io.yaml  chromadb-default-embeddings.yaml  context-window-packing.yaml  (+152 more)
schema/: solution.json  tip.json
scripts/: export_gems.py  validate_entry.py
tests/: test_cli.py  test_contribute.py  test_integration.py  test_models.py  test_search.py  test_server.py  test_sync.py  test_vote.py
(+147 files in other folders)
